syntax = "proto3";

package sts;

option go_package='./pb';

message GenCosStsReq {
  string path = 1;
}

message GenCosStsResp {
  string secretId = 1;
  string secretKey = 2;
  string sessionToken = 3;
  int64 expiredTime = 4;
  int64 startTime = 5;
}

message GenSignedUrlReq {
  string secretId = 1;
  string secretKey = 2;
  string method = 3;
  string path = 4;
}

message GenSignedUrlResp {
  string signedUrl = 1;
}

message DeleteObjectReq {
  string path = 1;
}

message DeleteObjectResp {

}

service sts_rpc {
  rpc genCosSts(GenCosStsReq) returns (GenCosStsResp);
  rpc genSignedUrl(GenSignedUrlReq) returns (GenSignedUrlResp);
  rpc deleteObject(DeleteObjectReq) returns (DeleteObjectResp);
}